# SocialBarometer

./: README.md
socialbarometer/: pyproject.toml
socialbarometer/socialbarometer/: main.py
socialbarometer/socialbarometer/alerts/: alert_manager.py
socialbarometer/socialbarometer/analyzers/: sentiment_analyzer.py
socialbarometer/socialbarometer/collectors/: base_collector.py  reddit_collector.py  twitter_collector.py
socialbarometer/socialbarometer/database/: db_manager.py
socialbarometer/socialbarometer/utils/: config.py  logger.py
socialbarometer/tests/: test_alerts.py  test_analyzers.py  test_collectors.py
